Fixed nested repeaters spacing

--- a/src/scss/parts/fields/_group.scss
+++ b/src/scss/parts/fields/_group.scss
@@ -96,6 +96,10 @@
                 border: none;
             }
         }
+
+        .repeater {
+            margin: s(-30) s(-20);
+        }
     }
 
     &__backlink {
